nobase_include_HEADERS = \
xqc.h \
xqilla/xqilla-dom3.hpp \
xqilla/xqilla-simple.hpp \
xqilla/xqilla-xqc.h \
xqilla/ast/LocationInfo.hpp \
xqilla/ast/XQCastableAs.hpp \
xqilla/ast/XQMap.hpp \
xqilla/ast/XQCastAs.hpp \
xqilla/ast/XQContextItem.hpp \
xqilla/ast/XQCopy.hpp \
xqilla/ast/XQCopyOf.hpp \
xqilla/ast/XQFunction.hpp \
xqilla/ast/ASTNode.hpp \
xqilla/ast/XQIf.hpp \
xqilla/ast/ASTNodeImpl.hpp \
xqilla/ast/XQInlineFunction.hpp \
xqilla/ast/XQLiteral.hpp \
xqilla/ast/XQNav.hpp \
xqilla/ast/XQOperator.hpp \
xqilla/ast/XQSequence.hpp \
xqilla/ast/XQStep.hpp \
xqilla/ast/XQTreatAs.hpp \
xqilla/ast/XQFunctionCoercion.hpp \
xqilla/ast/XQVariable.hpp \
xqilla/ast/StaticAnalysis.hpp \
xqilla/ast/StaticType.hpp \
xqilla/ast/NumericFunction.hpp \
xqilla/ast/XQDOMConstructor.hpp \
xqilla/ast/XQDocumentConstructor.hpp \
xqilla/ast/XQElementConstructor.hpp \
xqilla/ast/XQAttributeConstructor.hpp \
xqilla/ast/XQNamespaceConstructor.hpp \
xqilla/ast/XQPIConstructor.hpp \
xqilla/ast/XQCommentConstructor.hpp \
xqilla/ast/XQTextConstructor.hpp \
xqilla/ast/XQFunctionCall.hpp \
xqilla/ast/XQFunctionConversion.hpp \
xqilla/ast/XQFunctionDeref.hpp \
xqilla/ast/XQPartialApply.hpp \
xqilla/ast/XQFunctionRef.hpp \
xqilla/ast/XQGlobalVariable.hpp \
xqilla/ast/XQOrderingChange.hpp \
xqilla/ast/XQQuantified.hpp \
xqilla/ast/XQTypeswitch.hpp \
xqilla/ast/XQValidate.hpp \
xqilla/ast/XQAtomize.hpp \
xqilla/ast/XQEffectiveBooleanValue.hpp \
xqilla/ast/XQAnalyzeString.hpp \
xqilla/ast/ConvertFunctionArg.hpp \
xqilla/ast/XQDocumentOrder.hpp \
xqilla/ast/XQPredicate.hpp \
xqilla/ast/XQReturn.hpp \
xqilla/ast/TupleNode.hpp \
xqilla/ast/ContextTuple.hpp \
xqilla/ast/ForTuple.hpp \
xqilla/ast/LetTuple.hpp \
xqilla/ast/OrderByTuple.hpp \
xqilla/ast/WhereTuple.hpp \
xqilla/ast/CountTuple.hpp \
xqilla/ast/XQNamespaceBinding.hpp \
xqilla/ast/XQCallTemplate.hpp \
xqilla/ast/XQApplyTemplates.hpp \
xqilla/debug/InteractiveDebugger.hpp \
xqilla/debug/InputParser.hpp \
xqilla/debug/DebugListener.hpp \
xqilla/debug/DebugHookDecorator.hpp \
xqilla/debug/ASTDebugHook.hpp \
xqilla/debug/TupleDebugHook.hpp \
xqilla/debug/StackFrame.hpp \
xqilla/events/ContentSequenceFilter.hpp \
xqilla/events/EventGenerator.hpp \
xqilla/events/EventHandler.hpp \
xqilla/events/EventSerializer.hpp \
xqilla/events/NSFixupFilter.hpp \
xqilla/events/QueryPathTreeFilter.hpp \
xqilla/events/SequenceBuilder.hpp \
xqilla/fastxdm/FastXDMConfiguration.hpp \
xqilla/fulltext/FTContains.hpp \
xqilla/fulltext/FTSelection.hpp \
xqilla/fulltext/FTWords.hpp \
xqilla/fulltext/FTOr.hpp \
xqilla/fulltext/FTAnd.hpp \
xqilla/fulltext/FTMildnot.hpp \
xqilla/fulltext/FTUnaryNot.hpp \
xqilla/fulltext/AllMatches.hpp \
xqilla/fulltext/Match.hpp \
xqilla/fulltext/TokenInfo.hpp \
xqilla/fulltext/Tokenizer.hpp \
xqilla/fulltext/DefaultTokenizer.hpp \
xqilla/fulltext/TokenStore.hpp \
xqilla/fulltext/DefaultTokenStore.hpp \
xqilla/fulltext/FTOption.hpp \
xqilla/fulltext/FTOrder.hpp \
xqilla/fulltext/FTRange.hpp \
xqilla/fulltext/FTDistance.hpp \
xqilla/fulltext/FTScope.hpp \
xqilla/fulltext/FTContent.hpp \
xqilla/fulltext/FTWindow.hpp \
xqilla/axis/NodeTest.hpp \
xqilla/context/ContextHelpers.hpp \
xqilla/context/DynamicContext.hpp \
xqilla/context/StaticContext.hpp \
xqilla/context/ItemFactory.hpp \
xqilla/context/MessageListener.hpp \
xqilla/context/ModuleResolver.hpp \
xqilla/context/URIResolver.hpp \
xqilla/context/VariableStore.hpp \
xqilla/context/Scope.hpp \
xqilla/context/VarHashEntry.hpp \
xqilla/context/VariableTypeStore.hpp \
xqilla/context/Collation.hpp \
xqilla/context/ExternalFunctionResolver.hpp \
xqilla/context/UpdateFactory.hpp \
xqilla/context/RegexGroupStore.hpp \
xqilla/context/impl/CollationImpl.hpp \
xqilla/context/impl/VarHashEntryImpl.hpp \
xqilla/context/impl/VarStoreImpl.hpp \
xqilla/context/impl/VariableStoreTemplate.hpp \
xqilla/context/impl/CodepointCollation.hpp \
xqilla/context/impl/XQContextImpl.hpp \
xqilla/context/impl/XQDynamicContextImpl.hpp \
xqilla/context/impl/ItemFactoryImpl.hpp \
xqilla/dom-api/impl/XQillaNSResolverImpl.hpp \
xqilla/dom-api/XPath2Result.hpp \
xqilla/dom-api/XQillaExpression.hpp \
xqilla/dom-api/XQillaNSResolver.hpp \
xqilla/exceptions/XQillaException.hpp \
xqilla/exceptions/ContextException.hpp \
xqilla/exceptions/ASTException.hpp \
xqilla/exceptions/DynamicErrorException.hpp \
xqilla/exceptions/FunctionException.hpp \
xqilla/exceptions/IllegalArgumentException.hpp \
xqilla/exceptions/ItemException.hpp \
xqilla/exceptions/NamespaceLookupException.hpp \
xqilla/exceptions/StaticErrorException.hpp \
xqilla/exceptions/TypeErrorException.hpp \
xqilla/exceptions/TypeNotFoundException.hpp \
xqilla/exceptions/XMLParseException.hpp \
xqilla/exceptions/XPath2ErrorException.hpp \
xqilla/exceptions/XPath2TypeCastException.hpp \
xqilla/exceptions/XPath2TypeMatchException.hpp \
xqilla/exceptions/XQException.hpp \
xqilla/exceptions/QueryInterruptedException.hpp \
xqilla/exceptions/QueryTimeoutException.hpp \
xqilla/functions/EXSLTMathFunction.hpp \
xqilla/functions/ExternalFunction.hpp \
xqilla/functions/FunctionLookup.hpp \
xqilla/functions/FunctionAnalyzeString.hpp \
xqilla/functions/FunctionAbs.hpp \
xqilla/functions/FunctionAcos.hpp \
xqilla/functions/FunctionAsin.hpp \
xqilla/functions/FunctionAtan.hpp \
xqilla/functions/FunctionAdjustDateTimeToTimezone.hpp \
xqilla/functions/FunctionAdjustDateToTimezone.hpp \
xqilla/functions/FunctionAdjustTimeToTimezone.hpp \
xqilla/functions/FunctionBaseURI.hpp \
xqilla/functions/FunctionCaseFold.hpp \
xqilla/functions/FunctionCeiling.hpp \
xqilla/functions/FunctionCodepointsToString.hpp \
xqilla/functions/FunctionCollection.hpp \
xqilla/functions/FunctionCompare.hpp \
xqilla/functions/FunctionConcat.hpp \
xqilla/functions/FunctionContains.hpp \
xqilla/functions/FunctionCos.hpp \
xqilla/functions/FunctionCount.hpp \
xqilla/functions/FunctionCurrentDate.hpp \
xqilla/functions/FunctionCurrentDateTime.hpp \
xqilla/functions/FunctionCurrentTime.hpp \
xqilla/functions/FunctionDateTime.hpp \
xqilla/functions/FunctionDayFromDate.hpp \
xqilla/functions/FunctionDayFromDateTime.hpp \
xqilla/functions/FunctionDaysFromDuration.hpp \
xqilla/functions/FunctionDefaultCollation.hpp \
xqilla/functions/FunctionDistinctValues.hpp \
xqilla/functions/FunctionDocAvailable.hpp \
xqilla/functions/FunctionDoc.hpp \
xqilla/functions/FunctionDocument.hpp \
xqilla/functions/FunctionDocumentURI.hpp \
xqilla/functions/FunctionEmpty.hpp \
xqilla/functions/FunctionEndsWith.hpp \
xqilla/functions/FunctionExp.hpp \
xqilla/functions/FunctionError.hpp \
xqilla/functions/FunctionFloor.hpp \
xqilla/functions/FunctionFunctionArity.hpp \
xqilla/functions/FunctionFunctionName.hpp \
xqilla/functions/FunctionHoursFromDateTime.hpp \
xqilla/functions/FunctionHoursFromDuration.hpp \
xqilla/functions/FunctionHoursFromTime.hpp \
xqilla/functions/FunctionId.hpp \
xqilla/functions/FunctionIdref.hpp \
xqilla/functions/FunctionImplicitTimezone.hpp \
xqilla/functions/FunctionLang.hpp \
xqilla/functions/FunctionLast.hpp \
xqilla/functions/FunctionLocalNameFromQName.hpp \
xqilla/functions/FunctionLocalname.hpp \
xqilla/functions/FunctionLog.hpp \
xqilla/functions/FunctionLowerCase.hpp \
xqilla/functions/FunctionMatches.hpp \
xqilla/functions/FunctionMinutesFromDateTime.hpp \
xqilla/functions/FunctionMinutesFromDuration.hpp \
xqilla/functions/FunctionMinutesFromTime.hpp \
xqilla/functions/FunctionMonthFromDate.hpp \
xqilla/functions/FunctionMonthFromDateTime.hpp \
xqilla/functions/FunctionMonthsFromDuration.hpp \
xqilla/functions/FunctionName.hpp \
xqilla/functions/FunctionNamespaceURIFromQName.hpp \
xqilla/functions/FunctionNamespaceUri.hpp \
xqilla/functions/FunctionNilled.hpp \
xqilla/functions/FunctionNodeName.hpp \
xqilla/functions/FunctionNormalizeSpace.hpp \
xqilla/functions/FunctionNormalizeUnicode.hpp \
xqilla/functions/FunctionNot.hpp \
xqilla/functions/FunctionNumber.hpp \
xqilla/functions/FunctionParseHTML.hpp \
xqilla/functions/FunctionParseJSON.hpp \
xqilla/functions/FunctionExplain.hpp \
xqilla/functions/FunctionSentences.hpp \
xqilla/functions/FunctionSerializeJSON.hpp \
xqilla/functions/FunctionParseXML.hpp \
xqilla/functions/FunctionPosition.hpp \
xqilla/functions/FunctionPower.hpp \
xqilla/functions/FunctionPrefixFromQName.hpp \
xqilla/functions/FunctionQName.hpp \
xqilla/functions/FunctionRegexGroup.hpp \
xqilla/functions/FunctionReplace.hpp \
xqilla/functions/FunctionResolveURI.hpp \
xqilla/functions/FunctionRoot.hpp \
xqilla/functions/FunctionRoundHalfToEven.hpp \
xqilla/functions/FunctionRound.hpp \
xqilla/functions/FunctionSecondsFromDateTime.hpp \
xqilla/functions/FunctionSecondsFromDuration.hpp \
xqilla/functions/FunctionSecondsFromTime.hpp \
xqilla/functions/FunctionSin.hpp \
xqilla/functions/FunctionSqrt.hpp \
xqilla/functions/FunctionStartsWith.hpp \
xqilla/functions/FunctionStaticBaseURI.hpp \
xqilla/functions/FunctionString.hpp \
xqilla/functions/FunctionStringLength.hpp \
xqilla/functions/FunctionStringToCodepoints.hpp \
xqilla/functions/FunctionSubstring.hpp \
xqilla/functions/FunctionTan.hpp \
xqilla/functions/FunctionTime.hpp \
xqilla/functions/FunctionTimezoneFromDate.hpp \
xqilla/functions/FunctionTimezoneFromDateTime.hpp \
xqilla/functions/FunctionTimezoneFromTime.hpp \
xqilla/functions/FunctionTokenize.hpp \
xqilla/functions/FunctionTrace.hpp \
xqilla/functions/FunctionHead.hpp \
xqilla/functions/FunctionTail.hpp \
xqilla/functions/FunctionUnordered.hpp \
xqilla/functions/FunctionUnparsedText.hpp \
xqilla/functions/FunctionUpperCase.hpp \
xqilla/functions/FunctionWords.hpp \
xqilla/functions/FunctionYearFromDate.hpp \
xqilla/functions/FunctionYearFromDateTime.hpp \
xqilla/functions/FunctionYearsFromDuration.hpp \
xqilla/functions/FuncFactory.hpp \
xqilla/functions/FuncFactoryTemplate.hpp \
xqilla/functions/RegExpFunction.hpp \
xqilla/functions/XQUserFunction.hpp \
xqilla/functions/FunctionSignature.hpp \
xqilla/functions/XQillaFunction.hpp \
xqilla/functions/BuiltInModules.hpp \
xqilla/items/ATAnySimpleType.hpp \
xqilla/items/ATAnyURIOrDerived.hpp \
xqilla/items/ATBase64BinaryOrDerived.hpp \
xqilla/items/ATBooleanOrDerived.hpp \
xqilla/items/ATDateOrDerived.hpp \
xqilla/items/ATDateTimeOrDerived.hpp \
xqilla/items/ATDecimalOrDerived.hpp \
xqilla/items/ATDoubleOrDerived.hpp \
xqilla/items/ATDurationOrDerived.hpp \
xqilla/items/ATFloatOrDerived.hpp \
xqilla/items/ATGDayOrDerived.hpp \
xqilla/items/ATGMonthDayOrDerived.hpp \
xqilla/items/ATGMonthOrDerived.hpp \
xqilla/items/ATGYearMonthOrDerived.hpp \
xqilla/items/ATGYearOrDerived.hpp \
xqilla/items/ATHexBinaryOrDerived.hpp \
xqilla/items/ATNotationOrDerived.hpp \
xqilla/items/ATQNameOrDerived.hpp \
xqilla/items/ATStringOrDerived.hpp \
xqilla/items/ATTimeOrDerived.hpp \
xqilla/items/ATUntypedAtomic.hpp \
xqilla/items/AnyAtomicType.hpp \
xqilla/items/DateOrTimeType.hpp \
xqilla/items/FunctionRef.hpp \
xqilla/items/Item.hpp \
xqilla/items/Node.hpp \
xqilla/items/Numeric.hpp \
xqilla/items/Timezone.hpp \
xqilla/items/DatatypeLookup.hpp \
xqilla/items/DatatypeFactory.hpp \
xqilla/items/impl/ATBooleanOrDerivedImpl.hpp \
xqilla/items/impl/ATDecimalOrDerivedImpl.hpp \
xqilla/items/impl/ATDoubleOrDerivedImpl.hpp \
xqilla/items/impl/ATFloatOrDerivedImpl.hpp \
xqilla/items/impl/ATQNameOrDerivedImpl.hpp \
xqilla/items/impl/ATDurationOrDerivedImpl.hpp \
xqilla/items/impl/ATDateTimeOrDerivedImpl.hpp \
xqilla/items/impl/ATDateOrDerivedImpl.hpp \
xqilla/items/impl/ATTimeOrDerivedImpl.hpp \
xqilla/items/impl/ATGDayOrDerivedImpl.hpp \
xqilla/items/impl/ATGMonthDayOrDerivedImpl.hpp \
xqilla/items/impl/ATGMonthOrDerivedImpl.hpp \
xqilla/items/impl/ATGYearMonthOrDerivedImpl.hpp \
xqilla/items/impl/ATGYearOrDerivedImpl.hpp \
xqilla/mapm/m_apm.h \
xqilla/operators/And.hpp \
xqilla/operators/ArithmeticOperator.hpp \
xqilla/operators/ComparisonOperator.hpp \
xqilla/operators/Divide.hpp \
xqilla/operators/Equals.hpp \
xqilla/operators/Except.hpp \
xqilla/operators/GeneralComp.hpp \
xqilla/operators/GreaterThanEqual.hpp \
xqilla/operators/GreaterThan.hpp \
xqilla/operators/IntegerDivide.hpp \
xqilla/operators/Intersect.hpp \
xqilla/operators/LessThanEqual.hpp \
xqilla/operators/LessThan.hpp \
xqilla/operators/Minus.hpp \
xqilla/operators/Mod.hpp \
xqilla/operators/Multiply.hpp \
xqilla/operators/NodeComparison.hpp \
xqilla/operators/NotEquals.hpp \
xqilla/operators/OrderComparison.hpp \
xqilla/operators/Or.hpp \
xqilla/operators/Plus.hpp \
xqilla/operators/UnaryMinus.hpp \
xqilla/operators/Union.hpp \
xqilla/optimizer/Optimizer.hpp \
xqilla/optimizer/ASTCopier.hpp \
xqilla/optimizer/ASTReleaser.hpp \
xqilla/optimizer/ASTVisitor.hpp \
xqilla/optimizer/PartialEvaluator.hpp \
xqilla/optimizer/StaticTyper.hpp \
xqilla/optimizer/QueryPathNode.hpp \
xqilla/optimizer/QueryPathTreeGenerator.hpp \
xqilla/optimizer/ASTToXML.hpp \
xqilla/parser/QName.hpp \
xqilla/runtime/ClosureResult.hpp \
xqilla/runtime/TupleResult.hpp \
xqilla/runtime/Sequence.hpp \
xqilla/runtime/ResultBuffer.hpp \
xqilla/runtime/ResultBufferImpl.hpp \
xqilla/runtime/Result.hpp \
xqilla/runtime/ResultImpl.hpp \
xqilla/runtime/SequenceResult.hpp \
xqilla/runtime/EmptyResult.hpp \
xqilla/schema/DocumentCache.hpp \
xqilla/schema/SequenceType.hpp \
xqilla/schema/AnyAtomicTypeDatatypeValidator.hpp \
xqilla/schema/DocumentCacheImpl.hpp \
xqilla/schema/SchemaValidatorFilter.hpp \
xqilla/simple-api/XQilla.hpp \
xqilla/simple-api/XQillaConfiguration.hpp \
xqilla/simple-api/XQQuery.hpp \
xqilla/update/FunctionPut.hpp \
xqilla/update/PendingUpdateList.hpp \
xqilla/update/UApplyUpdates.hpp \
xqilla/update/UDelete.hpp \
xqilla/update/URename.hpp \
xqilla/update/UReplace.hpp \
xqilla/update/UReplaceValueOf.hpp \
xqilla/update/UInsertAsFirst.hpp \
xqilla/update/UInsertAsLast.hpp \
xqilla/update/UInsertInto.hpp \
xqilla/update/UInsertAfter.hpp \
xqilla/update/UInsertBefore.hpp \
xqilla/update/UTransform.hpp \
xqilla/utils/NumUtils.hpp \
xqilla/utils/XPath2NSUtils.hpp \
xqilla/utils/XPath2Utils.hpp \
xqilla/utils/XMLChCompare.hpp \
xqilla/utils/XStr.hpp \
xqilla/utils/ContextUtils.hpp \
xqilla/utils/UTF8Str.hpp \
xqilla/utils/XQillaPlatformUtils.hpp \
xqilla/utils/UnicodeTransformer.hpp \
xqilla/utils/utf8proc.h \
xqilla/utils/DelayedModule.hpp \
xqilla/framework/ReferenceCounted.hpp \
xqilla/framework/XPath2MemoryManager.hpp \
xqilla/framework/BaseMemoryManager.hpp \
xqilla/framework/ProxyMemoryManager.hpp \
xqilla/framework/StringPool.hpp \
xqilla/framework/XPath2MemoryManagerImpl.hpp \
xqilla/framework/XQillaExport.hpp \
xqilla/xerces/XercesConfiguration.hpp \
xqilla/xqts/TestSuiteParser.hpp \
xqilla/xqts/TestSuiteResultListener.hpp \
xqilla/xqts/TestSuiteRunner.hpp


docs: $(top_srcdir)/docs/.simple-api-timestamp $(top_srcdir)/docs/.dom3-api-timestamp $(top_srcdir)/docs/.xqc-api-timestamp

docsclean:
	rm -rf $(top_srcdir)/docs/simple-api $(top_srcdir)/docs/dom3-api $(top_srcdir)/docs/xqc-api && \
	rm $(top_srcdir)/docs/.simple-api-timestamp $(top_srcdir)/docs/.dom3-api-timestamp $(top_srcdir)/docs/.xqc-api-timestamp && \
	rm $(top_srcdir)/docs/Doxyfile.simpleapi $(top_srcdir)/docs/Doxyfile.dom3api $(top_srcdir)/docs/Doxyfile.xqc

$(top_srcdir)/docs/.simple-api-timestamp: $(nobase_include_HEADERS) $(top_srcdir)/docs/Doxyfile.simpleapi $(top_srcdir)/docs/simple_header.html
	cd $(top_srcdir)/docs && \
		doxygen Doxyfile.simpleapi && \
		touch .simple-api-timestamp

$(top_srcdir)/docs/Doxyfile.simpleapi: $(top_srcdir)/docs/Doxyfile.simpleapi.in
	sed -e "s,%xerces_include%,$(xerces_include_dir)," -e "s,%version%,$(VERSION)," $(top_srcdir)/docs/Doxyfile.simpleapi.in >$(top_srcdir)/docs/Doxyfile.simpleapi

$(top_srcdir)/docs/.dom3-api-timestamp: $(nobase_include_HEADERS) $(top_srcdir)/docs/Doxyfile.dom3api
	cd $(top_srcdir)/docs && \
		doxygen Doxyfile.dom3api && \
		touch .dom3-api-timestamp

$(top_srcdir)/docs/Doxyfile.dom3api: $(top_srcdir)/docs/Doxyfile.dom3api.in $(top_srcdir)/docs/dom3_header.html
	sed -e "s,%xerces_include%,$(xerces_include_dir)," -e "s,%version%,$(VERSION)," $(top_srcdir)/docs/Doxyfile.dom3api.in >$(top_srcdir)/docs/Doxyfile.dom3api

$(top_srcdir)/docs/.xqc-api-timestamp: $(nobase_include_HEADERS) $(top_srcdir)/docs/Doxyfile.xqc $(top_srcdir)/docs/xqc_header.html
	cd $(top_srcdir)/docs && \
		doxygen Doxyfile.xqc && \
		touch .xqc-api-timestamp

$(top_srcdir)/docs/Doxyfile.xqc: $(top_srcdir)/docs/Doxyfile.xqc.in
	sed -e "s,%xerces_include%,$(xerces_include_dir)," -e "s,%version%,$(VERSION)," $(top_srcdir)/docs/Doxyfile.xqc.in >$(top_srcdir)/docs/Doxyfile.xqc

devdocs: $(top_srcdir)/docs/.dev-api-timestamp

devdocsclean:
	rm -rf $(top_srcdir)/docs/dev-api && \
	rm $(top_srcdir)/docs/.dev-api-timestamp && \
	rm $(top_srcdir)/docs/Doxyfile.devapi

$(top_srcdir)/docs/.dev-api-timestamp: $(nobase_include_HEADERS) $(top_srcdir)/docs/Doxyfile.devapi
	cd $(top_srcdir)/docs && \
		doxygen Doxyfile.devapi && \
		touch .dev-api-timestamp

$(top_srcdir)/docs/Doxyfile.devapi: $(top_srcdir)/docs/Doxyfile.devapi.in
	sed -e "s,%xerces_include%,$(xerces_include_dir)," $(top_srcdir)/docs/Doxyfile.devapi.in >$(top_srcdir)/docs/Doxyfile.devapi

# Target to help keep the windows projects up-to-date
winprojects:
	@echo "      <filter name='include'>" >winprojects_files.xml
	@list='$(nobase_include_HEADERS)'; for f in $$list; do \
    echo "        <file name='include/$$f'/>" >>winprojects_files.xml; \
  done
	@echo "      </filter>" >>winprojects_files.xml
